# thumbnailer2

./: .gitignore  .pre-commit-config.yaml  deploy.sh  lgw.cfg  pyproject.toml
src/thumbnailer/: __init__.py  image.py  lambda.py  main.py  responses.py  s3.py  util.py
tests/: test_thumbnailer.py
